syntax = "proto3";
package state;
option go_package = "pb";

import "channel.proto";
import "emoji.proto";
import "guild.proto";
import "member.proto";
import "user.proto";
import "message.proto";
import "role.proto";

service State {
	rpc GetChannel(GetChannelRequest) returns (GetChannelResponse) {}
	rpc SetChannel(SetChannelRequest) returns (SetChannelResponse) {}
	rpc UpdateChannel(UpdateChannelRequest) returns (UpdateChannelResponse) {}

	rpc GetEmoji(GetEmojiRequest) returns (GetEmojiResponse) {}
	rpc SetEmoji(SetEmojiRequest) returns (SetEmojiResponse) {}
	rpc UpdateEmoji(UpdateEmojiRequest) returns (UpdateEmojiResponse) {}

	rpc GetGuild(GetGuildRequest) returns (GetGuildResponse) {}
	rpc SetGuild(SetGuildRequest) returns (SetGuildResponse) {}
	rpc UpdateGuild(UpdateGuildRequest) returns (UpdateGuildResponse) {}

	rpc GetMember(GetMemberRequest) returns (GetMemberResponse) {}
	rpc SetMember(SetMemberRequest) returns (SetMemberResponse) {}
	rpc UpdateMember(UpdateMemberRequest) returns (UpdateMemberResponse) {}

	rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
	rpc SetUser(SetUserRequest) returns (SetUserResponse) {}
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}

	rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) {}
	rpc SetMessage(SetMessageRequest) returns (SetMessageResponse) {}
	rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse) {}

	rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {}
	rpc SetRole(SetRoleRequest) returns (SetRoleResponse) {}
	rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse) {}
}
